@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 64219126a44d74e8f5eadc0e6169f3ca5b367bd7 ChangeLog
+SHA1 1f55947442159777dd9c482401dd3f12b2524afe ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
-SHA1 267eb1f52e35f9bebd47b3f39ca5ecbe34266a02 META.yml
-SHA1 1e763ac21a05a043b7e44afce3c131a25fb6be94 Makefile.PL
+SHA1 c7d042debff355a6fedd83547215d74f4bfca499 META.yml
+SHA1 7f3032392a7ee134fdd051a8d2c55bde7abed03d Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 aa152c829fcf86957fd2012f6c30e5e18d3c76b2 bin/fullauto.pl
@@ -47,7 +47,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 4bf2b6490f459f6b5c4d881c0586b9a641a5e123 lib/Net/FullAuto.pm
+SHA1 fa2e2eebedb796e5db9b1d3d408b4bffa5877bc1 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -64,11 +64,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTsWEkAAoJEBa/9Pad787EQ50IAI1jEHfIzo31yHBCAyj/qcnR
-7gwyukQBSFjzS5z+bccGJkgM2BRz91gd7XTSICdi/K4ENDdflefWdMbJuJs81KyP
-CarQqH19xVM9SvjrVWACoNJ9O7mtgDPJiyUrVJaQXYyy9HefZZyTXQUTD1DOhoXq
-GeChiGgznTNU3zIewf3LiObRVZA0qWQCijxVawlR5RStxVJh40eyiropOeOE6Ksy
-xawa7w58oSOLprga0AWh7Bv+Gig0fvLtzVHUKsLGNy6DKDYf+xpK8BqrOgLo+6lf
-G6NaTc1rwvS24J10wXyoAWpKwkPnT1pDmqZfpnSAk2Wkzh/KWqoovT946acZ7sA=
-=JK/1
+iQEcBAEBAgAGBQJTsWQFAAoJEBa/9Pad787E0y0H/1B4pf6a3BZvuxekSHjGQxB0
+rBIi9fJr5dGzSkw2dH8n5LN3ZOt+hFdJZmf+Xn5lvJT8ZTlwDKx/CGPIBBdqt02B
+6i23E898vopM5hf6wgS1NuKt0BO6LM7iv23mae089U7FzHEnsuSQJr0BMZzUSpse
+IVIsCV0DACpgjhl9iNJ2SL/4dfJRbcr9odEB4K3fnF4rTVduPBXsN91zzQlWyyB9
+u6jyAaspH6ww2IA42cnLOKHtFeMqdoHejHtw6h/gu0tJW6XV52rHAX8AVgSCAy5s
+0Les2NE40FnumJ7oX1Sb8cbD0FtcqdVSOAkLXG14oqYVXJ2RUl99zuIPT7k1uOg=
+=5pId
 -----END PGP SIGNATURE-----
