@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.9999999926';
+our $VERSION='0.9999999927';
 
 
 use 5.005;
